0.1.2 - Fixes for QuickNav appearing as two lines on mobile
Also changed any instances of LimeGorilla to limegorilla

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -79,6 +79,8 @@
     min-width: 4em;
     padding: 0 1em;
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .mininav-item:hover {
@@ -100,6 +102,8 @@
     padding: 0 2em;
     font-weight: 500;
     font-size: 1.3em;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .mininav-link {
